cabal-version:  1.12

name:           logger
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/dabliuw22/haskell-http#readme>
homepage:       https://github.com/dabliuw22/haskell-http#readme
bug-reports:    https://github.com/dabliuw22/haskell-http/issues
author:         Will Leyton
maintainer:     wleylop22@gmail.com
copyright:      2020 Will Leyton
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
    Logger.Config.LogConfig
    Logger.Log
  other-modules:
      Paths_logger
  hs-source-dirs:
      src
  build-depends:
      base >= 4.5 && < 5
    , directory
    , katip >= 0.1.0.0 && < 0.8.6.0
    , envs
  default-language: Haskell2010
