cabal-version:  1.12

name:           products-adapter
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/dabliuw22/haskell-http#readme>
homepage:       https://github.com/dabliuw22/haskell-http#readme
bug-reports:    https://github.com/dabliuw22/haskell-http/issues
author:         Will Leyton
maintainer:     wleylop22@gmail.com
copyright:      2020 Will Leyton
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
    Adapter.Effect.AsyncTask
    Adapter.Http.CommandProducts
    Adapter.Http.Error
    Adapter.Http.GetProducts
    Adapter.Http.Products
    Adapter.Postgres.Products
  other-modules:
    Paths_products_adapter
  hs-source-dirs:
    src
  build-depends:
      aeson
    , async
    , base >=4.5 && <5
    , bytestring >=0.10.10 && <0.11
    , bytestring-conversion >=0.1 && <0.3.2
    , directory
    , exceptions
    , http-types
    , jose
    , katip >=0.1.0.0 && <0.8.6.0
    , lens >=4.0 && <4.20
    , logger
    , mtl >=2.0.1 && <2.3
    , postgres
    , postgresql-simple
    , resource-pool
    , servant
    , servant-auth-server
    , servant-server
    , text >=1.2.2.1 && <1.3
    , time >=1.9.3 && <1.10
    , uuid >=1.3.13 && <1.4
    , products-domain
    , products-application
  default-language: Haskell2010
