cabal-version:  1.12

name:           products-application
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/dabliuw22/haskell-http#readme>
homepage:       https://github.com/dabliuw22/haskell-http#readme
bug-reports:    https://github.com/dabliuw22/haskell-http/issues
author:         Will Leyton
maintainer:     wleylop22@gmail.com
copyright:      2020 Will Leyton
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
    Application.Products
  other-modules:
      Paths_products_application
  hs-source-dirs:
      src
  build-depends:
      base >= 4.5 && < 5
    , exceptions
    , free
    , bytestring >=0.10.10 && <0.11
    , text >=1.2.2.1 && <1.3
    , time >=1.9.3 && <1.10
    , products-domain
  default-language: Haskell2010

test-suite products-application-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Application.ProductsSpec
      Paths_products_application
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.5 && <5
    , bytestring >=0.10.10 && <0.11
    , exceptions
    , free
    , hspec
    , lens >=4.0 && <4.20
    , products-application
    , products-domain
    , text
    , time >=1.9.3 && <1.10
    , uuid >=1.3.13 && <1.4
  default-language: Haskell2010
